    have to insert type conversions
    like ``(proc (a, b: int) {.closure.})(myToplevelProc)`` if necessary.



  Library additions
  -----------------

  - The nre module has been added, providing a better interface to PCRE than
    re.
  - The ``expandSymlink`` proc has been added to the ``os`` module.
  - The ``tailDir`` proc has been added to the ``os`` module.

  Language Additions
  ------------------

  - ``system.unsafeAddr`` can be used to access the address of a ``let``
    variable or parameter for C interoperability. Since technically this
    makes parameters and ``let`` variables mutable, it is considered even more
    unsafe than the ordinary ``addr`` builtin.


  Bugfixes
  --------


2015-05-04 Version 0.11.2 released
==================================

This is just a bugfix release that fixes the most pressing regressions we
introduced with version 0.11.0. The way types are computed was
changed significantly causing all sort of problems. Sorry for the
inconvenience; we grew overconfident our large test suite would prevent these
things.


2015-04-30 Version 0.11.0 released
==================================

With this release we are one step closer to reaching version 1.0 and by
extension the persistence of the Nim specification. As mentioned in the
previous release notes, starting with version 1.0, we will not be introducing
any more breaking changes to Nim.

The *language* itself is very close to 1.0, the primary area that requires
more work is the standard library.

Take a look at the `download <download.html>`_ page for binaries (Windows-only)
and 0.11.0 snapshots of the source code. The Windows installer now also
includes `Aporia <https://github.com/nim-lang/aporia>`_,
`Nimble <https://github.com/nim-lang/nimble>`_ and other useful tools to get
you started with Nim.

What's left to be done
~~~~~~~~~~~~~~~~~~~~~~

The 1.0 release is expected by the end of this year. Rumors say it will be in
summer 2015. What's left:
